[package]
name = "rustffi"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_image_converter"
crate-type = ["cdylib"]

[dependencies]
image = { version = "0.25.6", features = ["jpeg", "png", "webp"] }
libc = "0.2.172"
#serde = { version = "1.0.219", features = ["derive"] }
#serde_json = "1.0.140"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = false
